<resources>
    <string name="network">Check Network/Internet Connection!</string>
    <string name="reload">Reload..</string>
    <string name="settings">Settings</string>
    <string name="imdb">IMDB:</string>
    <string name="rating">Rating :</string>
    <string name="moviename">MovieName</string>
    <string name="year">Year :</string>
    <string name="movie_description">Movie Description</string>
    <string name="synopsis">Synopsis</string>
    <string name="app_name">Popular Movies</string>
    <string name="sort_order">Sort Order</string>
    <string name="most_popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="sort_order_key">sortOrder</string>
    <string name="favourite">Favourite</string>
    <string name="trailer">Trailer</string>
    <string name="review">Review</string>
    <string name="trailer_name">Movie Trailer Name</string>
    <string name="author">Author</string>
    <string name="movie_name">Movies Name</string>
    <string name="movie_image">Movie Image</string>
    <string name="youtube">Youtube Image</string>
    <string name="row_failed">Database Insert Failed</string>
    <string name="unknown_uri">Unknown URL</string>
</resources>
