<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="185dp"
    android:layout_height="277dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/cardview_shadow_end_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_movieposter"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            android:layout_margin="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/holo_green_dark"
            android:contentDescription="@string/movie_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView_movieposter"
            android:layout_marginStart="14dp"
            android:layout_marginTop="-4dp"
            android:padding="2dp"
            android:text="@string/imdb"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="14dp" />

        <TextView
            android:id="@+id/textView_imdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_movieposter"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-4dp"
            android:text="@string/rating" />

    </RelativeLayout>
</android.support.v7.widget.CardView>